# cbc-dbt-pre-commit

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  requirements.txt  setup.cfg
.github/workflows/: lint.yml  test.yml
cbc_dbt_pre_commit/: find_missing_model_unique_tests.py
tests/: test_missing_model_unique_tests.py
