[metadata]
name = pre_commit_hooks
version = v0.0.1
description = List of [pre-commit](https://pre-commit.com) hooks to ensure the quality of your [lightdash]https://www.lightdash.com/) project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbt-checkpoint/dbt-checkpoint
author = Craig Lathrop
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    pyyaml
python_requires = >=3.8

[options.entry_points]
console_scripts =
    find-missing-model-unique-tests = cbc_dbt_pre_commit.find_missing_model_unique_tests:main

[bdist_wheel]
universal = 1